style css file update

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <main>
-        <canvas width="480" height="720">
+        <canvas>
             <div class="game-screen">
                 <div id="bird"></div>
                 <div class="pilar"></div>
