--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
 
 <body>
     <main>
-        <canvas>
-            <div class="game-screen">
-                <div id="bird"></div>
-                <div class="pilar"></div>
-            </div>
+        <canvas id="canvas">
+
         </canvas>
     </main>
     <script src="./src/js/main.js"></script>
