arrowplane valocity controling

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
 <body>
     <main>
-        <canvas id="canvas">
-
-        </canvas>
+        <!-- <canvas id="canvas"></canvas> -->
+        <div id="canvas">
+            <img src="./src/img/plane.png" alt="plane image" id="plane">
+        </div>
     </main>
     <script src="./src/js/main.js"></script>
 </body>
