--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
 <body>
     <main>
         <!-- <canvas id="canvas"></canvas> -->
-        <div id="canvas">
-            <img src="./src/img/plane.png" alt="plane image" id="plane">
+        <div class="game-area">
+            <div id="canvas">
+                <img src="./src/img/plane.png" alt="plane image" id="plane">
+            </div>
+        </div>
+        <div class="game-action">
+            <button id="flyBtn">Fly</button>
         </div>
     </main>
     <script src="./src/js/main.js"></script>
