game background adding

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <!-- <canvas id="canvas"></canvas> -->
         <div class="game-area">
             <div id="canvas">
+                <div id="game-control">
+                    <img src="./src/img/gamebg.jpg" alt="game bg image" id="gamebg">
+                </div>
+
                 <img src="./src/img/plane.png" alt="plane image" id="plane">
             </div>
         </div>
