--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <div class="game-area">
             <div id="canvas">
                 <div id="game-control">
-                    <img src="./src/img/gamebg.jpg" alt="game bg image" id="gamebg">
+                    <!-- <img src="./src/img/gamebg.jpg" alt="game bg image" class="gamebg">
+                    <img src="./src/img/gamebg.jpg" alt="game bg image" class="gamebg"> -->
+                    <img src="./src/img/enemy.png" style="left: 500px;" alt="enemy image" class="enemy">
                 </div>
 
                 <img src="./src/img/plane.png" alt="plane image" id="plane">
