animation add to js file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,32 @@
                 <div id="game-control">
                     <!-- <img src="./src/img/gamebg.jpg" alt="game bg image" class="gamebg">
                     <img src="./src/img/gamebg.jpg" alt="game bg image" class="gamebg"> -->
-                    <img src="./src/img/enemy.png" style="left: 500px;" alt="enemy image" class="enemy">
+                    <div class="enemy-group">
+                        <img src="./src/img/enemy.png" style="left: 500px; top: 0; rotate: 180deg;" alt="enemy image"
+                            class="enemy">
+                        <img src="./src/img/enemy.png" style="left: 500px; bottom: 0;" alt="enemy image" class="enemy">
+                    </div>
+                    <div class="enemy-group">
+                        <img src="./src/img/enemy.png" style="left: 1000px; top: 0; rotate: 180deg;" alt="enemy image"
+                            class="enemy">
+                        <img src="./src/img/enemy.png" style="left: 1000px; bottom: 0;" alt="enemy image" class="enemy">
+                    </div>
+                    <div class="enemy-group">
+                        <img src="./src/img/enemy.png" style="left: 1400px; top: 0; rotate: 180deg;" alt="enemy image"
+                            class="enemy">
+                        <img src="./src/img/enemy.png" style="left: 1400px; bottom: 0;" alt="enemy image" class="enemy">
+                    </div>
+                    <div class="enemy-group">
+                        <img src="./src/img/enemy.png" style="left: 1800px; top: 0; rotate: 180deg;" alt="enemy image"
+                            class="enemy">
+                        <img src="./src/img/enemy.png" style="left: 1800px; bottom: 0;" alt="enemy image" class="enemy">
+                    </div>
+                    <div class="enemy-group">
+                        <img src="./src/img/enemy.png" style="left: 2500px; top: 0; rotate: 180deg;" alt="enemy image"
+                            class="enemy">
+                        <img src="./src/img/enemy.png" style="left: 2500px; bottom: 0;" alt="enemy image" class="enemy">
+                    </div>
+
                 </div>
 
                 <img src="./src/img/plane.png" alt="plane image" id="plane">
