game complete primarily

--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
                                 class="enemy">
                             <img src="./src/img/enemy.png" style="bottom: 0px;" alt="enemy image" class="enemy">
                         </div>
-
-
                     </div>
+                </div>
+                <div id="end-screen">
+
                 </div>
 
                 <img src="./src/img/plane.png" alt="plane image" id="plane">
