--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/styles/style.css">
     <title>Flappy Game</title>
+    <audio src="./src/audio/music.mp3" id="bgMusic" type="audio/mpeg"></audio>
+    <audio src="./src/audio/music.mp3" id="distroy" type="audio/mpeg"></audio>
+    <audio src="./src/audio/music.mp3" id="jump" type="audio/mpeg"></audio>
 </head>
 
 <body>
