play button added

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./src/img/plane.png" type="image/x-icon">
     <link rel="stylesheet" href="./src/styles/style.css">
     <title>Flappy Game</title>
     <audio src="./src/audio/music.mp3" id="bgMusic" type="audio/mpeg"></audio>
-    <audio src="./src/audio/music.mp3" id="distroy" type="audio/mpeg"></audio>
-    <audio src="./src/audio/music.mp3" id="jump" type="audio/mpeg"></audio>
+    <audio src="./src/audio/distroy.mp3" id="destroy" type="audio/mpeg"></audio>
+    <audio src="./src/audio/jump.mp3" id="jump" type="audio/mpeg"></audio>
 </head>
 
 <body>
