--- a/index.html
+++ b/index.html
@@ -44,11 +44,15 @@
                                 class="enemy">
                             <img src="./src/img/enemy.png" style="bottom: 0px;" alt="enemy image" class="enemy">
                         </div>
+                        <div class="enemy-group" id="enemy-group5">
+                            <img src="./src/img/enemy.png" style="top: -230px; rotate: 180deg;" alt="enemy image"
+                                class="enemy">
+                            <img src="./src/img/enemy.png" style="bottom: 30px;" alt="enemy image" class="enemy">
+                        </div>
                     </div>
                 </div>
-                <div id="end-screen">
-
-                </div>
+                <div id="end-screen"></div>
+                <div id="start-screen"></div>
 
                 <img src="./src/img/plane.png" alt="plane image" id="plane">
             </div>
