html file update

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="end-screen"></div>
+                <!-- <div id="end-screen"></div> -->
                 <div id="start-screen"></div>
 
                 <img src="./src/img/plane.png" alt="plane image" id="plane">
